dati-semantic-wordpress/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dati-semantic-wordpress
  namespace: ndc-prod
  labels:
    app: dati-semantic-wordpress
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: dati-semantic-wordpress
  sessionAffinity: None
